# mcp-universal-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
req/: mcp.md
src/: __main__.py
src/core/: audit.py  auth.py  budget.py  config.py  egress.py  policy.py  rate_limit.py  redact.py  registry.py  types.py
src/plugins/: _base.py
src/plugins/about_policies/: plugin.py
src/plugins/about_server/: plugin.py
src/plugins/core_echo/: plugin.py
src/plugins/core_sum/: plugin.py
src/plugins/instructions_agent/: plugin.py
src/plugins/llm_query/: input_guard.py  plugin.py
src/plugins/llm_query/providers/: anthropic.py  base.py  local.py  openai.py
src/plugins/prompt_review_pr/: plugin.py
src/plugins/prompt_tool_usage/: plugin.py
src/transport/: app.py  middleware.py
tests/: conftest.py  test_auth.py  test_budget.py  test_egress.py  test_integration.py  test_llm_query.py  test_plugins.py  test_policy.py  test_redact.py
